2010-02-22  Christoph Junghans (ottxor)

	* configure.in: Fix order of processing configuration options.
	Bug #2951583 #2956754

2010-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Use dynamic allocation for all font names. This prevents
	buffer overflow problems for very long font names.

2010-02-17  Christoph Junghans (ottxor)

	* configure.in plot.c: New configuration option to add local packager to
	list of contacts for bug reporting.
	Bug #2951583

2010-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Add brackets to suppress compiler complaints.
	* src/term.c (do_arc): Sanity checks for start and end angles of arc.
	* configure.in: Change default installation directory for x11 resources
	to /etc/X11/app-defaults.  Bug #1953742

2010-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot.c (interrupt_setup): Ctrl+C crashes windows console build.
	SF Patch #2848002

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
	"close" to the windows terminal driver. Update documentation
	accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Fix for windows terminal ignoring explicit fontname and
	size for labels.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wmenu.c (SendMacro): Bugfix in call to _getcwd.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Add the options "size" and "position" to the windows
	terminal driver. Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c: Update code to copy to clipboard as enhanced
	metafile, add Ctrl+C shortcut for graph window.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c src/win/wresourc.h: Add the possibility to